<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="tk.svsq.newsfeed.presentation.news_list.NewsListFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_saved"
        android:name="tk.svsq.newsfeed.presentation.fav_news.FavoriteNewsFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/detailsFragment"
        android:name="tk.svsq.newsfeed.presentation.news_details.ArticleDetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="article"
            app:argType="tk.svsq.newsfeed.domain.models.Article" />
    </fragment>

    <action
        android:id="@+id/global_action_navigate_to_detailsFragment"
        app:destination="@id/detailsFragment" />
</navigation>